Redo everything from the ground up

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
+    <div class="calculator" oncontextmenu="return false">
+        <input type="text" id="display" class="noselect" readonly>
+        <div class="calc-container">
 
+            
+        </div>
+    </div>
     <script src="calc.js"></script>
 </body>
 </html>
